# indigo

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.txt  TASK.md  TODO.md  cabal.project  cli  crdt.ts  demo  flake.nix  indigo.cabal  lenient-selection.md  nixpkgs.nix  selection-ownership-research.md  shell.nix  tui  tui-debug  tui-prof  unicode.txt
.claude/: settings.json
crates/agent/: Cargo.toml
crates/agent/src/: api.rs
crates/agent/src/api/: claude.rs
crates/btree/: Cargo.toml
crates/cli/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: action.rs  actions.rs  buffer.rs  crdt.rs  cursor.rs  cursor2.rs  cursor_byte.rs  cursor_unified.rs  cursor_view.rs  display_width.rs  editor.rs  event.rs  graphemes.rs  history.rs  hooks.rs  index.rs  key.rs  keymap.rs  lib.rs  main.rs  mode.rs  ot.rs  ot_byte.rs  pattern.rs  prelude.rs  range.rs  range2.rs  range_byte.rs  range_unified.rs  range_view.rs  references.rs  rope.rs  router.rs  text.rs  unicode.rs  wrappers.rs
crates/core/src/rope/: graphemes_iter.rs  graphemes_step.rs
crates/illuso/: Cargo.toml
crates/illuso-llm/: Cargo.toml  README.md
crates/illuso-term/: Cargo.toml  README.md
crates/illuso-tui/: Cargo.toml  README.md
crates/indigo/: Cargo.toml  README.md
crates/indigo-bevy/: Cargo.toml
crates/indigo-bevy/src/: main.rs  park.rs  terminal.rs  tui.rs
crates/indigo-cli/: Cargo.toml  README.md
crates/indigo-core/: Cargo.toml  README.md
crates/indigo-core/src/: action.rs  attribute.rs  attribute2.rs  attributes.rs  bias.rs  btree.rs  buffer.rs  command.rs  conversion.rs  cursor.rs  display_width.rs  edit.rs  editor.rs  event.rs  file.rs  fs.rs  grapheme.rs  graphemes.rs  history.rs  io.rs  key.rs  key2.rs  keymap.rs  lib.rs  mode.rs  ot.rs  pattern.rs  position.rs  prelude.rs  range.rs  rope.rs  selection.rs  settings.rs  text.rs  trie.rs  unicode.rs  window.rs
crates/indigo-core/src/mode/: command.rs  goto.rs  insert.rs  normal.rs  prompt.rs  replace.rs  seek.rs
crates/indigo-event/: Cargo.toml
crates/indigo-event/src/: action.rs  event.rs
crates/indigo-llm/: Cargo.toml  README.md
crates/indigo-nursery/: Cargo.toml
crates/indigo-state/: Cargo.toml
crates/indigo-term/: Cargo.toml  README.md
crates/indigo-tui/: Cargo.toml  README.md
crates/indigo-tui/examples/: chat.rs
crates/indigo-tui/src/: areas.rs  colors.rs  event.rs  fs.rs  io.rs  key.rs  lib.rs  main.rs  terminal.rs  ui.rs  widgets.rs
crates/indigo-tui/src/ui/: areas.rs  colors.rs  command.rs  line_numbers.rs
crates/indigo-tui/src/widgets/: command_bar.rs  editor.rs  line_numbers.rs  navigation_bar.rs  selection.rs  status_bar.rs  text.rs  tildes.rs
crates/indigo-ui/: Cargo.toml
crates/indigo-wrap/: README.md
crates/indigo/src/: areas.rs  event.rs  flexoki.rs  key.rs  lib.rs  main.rs  terminal.rs  theme.rs
crates/indigo/src/theme/: flexoki.rs
crates/ot/: Cargo.toml
crates/sim/: Cargo.toml
crates/tui/: Cargo.toml
crates/tui/src/: areas.rs  event.rs  key.rs  lib.rs  main.rs  render.rs  terminal.rs  widgets.rs
crates/tui/src/widgets/: command_bar.rs  editor.rs  line_numbers.rs  navigation_bar.rs  selection.rs  status_bar.rs  text.rs  tildes.rs
crates/world/: Cargo.toml
crates/wrap/: Cargo.toml
docs/: agents.md  cli.md  design.md  ideas.md  influences.md  inspiration.md  keys-checklist.md  todo.md  zen.md
docs/agents/: README.md
docs/plans/: readonly-attribute.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: actions.rs  cursor.rs  events.rs  fuzz_target_1.rs  range.rs
illuso/: Cargo.toml  README.md
illuso/crates/illuso/: Cargo.toml  README.md
illuso/crates/illuso-llm/: Cargo.toml  README.md
illuso/crates/illuso-llm/src/: claude.rs
illuso/crates/illuso-term/: Cargo.toml  README.md  da1-sentinel.md
illuso/crates/illuso-term/examples/: keys.rs  kitty-keyboard-flags.rs  tty.rs
illuso/crates/illuso-term/src/: cursor.rs  event.rs  lib.rs  parser.rs  reader.rs  style.rs
illuso/crates/illuso-tui/: Cargo.toml
illuso/crates/illuso-tui/examples/: chat.rs
illuso/crates/illuso-tui/src/: lib.rs
illuso/crates/illuso/src/: main.rs  old.rs
indigo/: Cargo.toml
indigo-cli/: Cargo.toml
indigo-cli/src/: main.rs
indigo-core/: Cargo.toml
indigo-core/src/: buffer.rs  command.rs  conversion.rs  direction.rs  editor.rs  file.rs  key.rs  key_map.rs  lib.rs  non_empty.rs  position.rs  range.rs  reflect.rs  rope.rs  selection.rs  selection2.rs  settings.rs  window.rs
indigo-core/src/key/: map.rs  types.rs  values.rs
indigo-core/src/mode/: command.rs  insert.rs
indigo-tui/: Cargo.toml
indigo-tui/src/: key.rs  main.rs  terminal.rs  ui.rs
indigo-tui/src/key/: macros.rs
indigo-tui/src/ui/: areas.rs  buffer.rs  colors.rs  column.rs  command.rs  numbers.rs  scrollbar.rs  selection.rs  status.rs  tildes.rs
indigo/src/: buffer.rs  editor.rs  lib.rs  macros.rs  main.rs  movement.rs  position.rs  range.rs  regex.rs  selection.rs  terminal.rs  tui.rs  ui.rs
indigo/src/ui/: buffer.rs  colors.rs  column.rs  command.rs  numbers.rs  selection.rs  status.rs
indigo_core/: Cargo.toml
indigo_core/benches/: rope_position.rs
indigo_core/src/: buffer.rs  command.rs  command_line.rs  commands.rs  conversion.rs  editor.rs  entangle.rs  key.rs  lib.rs  mode.rs  movement.rs  ot.rs  position.rs  range.rs  selection.rs  valid.rs  validate.rs
indigo_core/src/mode/: command.rs  insert.rs  normal.rs
indigo_event/: Cargo.toml
indigo_event/src/: lib.rs  main.rs
indigo_macros/: Cargo.toml
indigo_prev/: Cargo.toml
indigo_state/: Cargo.toml  notes.md
indigo_tui/: Cargo.toml
indigo_tui/src/: lib.rs  main.rs  terminal.rs
indigo_tui/src/ui/: buffer.rs
src/: Indigo.hs  Main.hs  actions.rs  buffer.rs  buffer2.rs  buffer_selection.rs  claude.rs  command.rs  conversion.rs  crdt.rs  cursor.rs  direction.rs  editor.rs  has.rs  history.rs  key.rs  lib.rs  macros.rs  main.rs  mode.rs  movement.rs  operand.rs  ot.rs  position.rs  range.rs  refs.rs  rope.rs  selection.rs  selection_range.rs  terminal.rs  text.rs  tui.rs  ui.rs  validate.rs  world.rs
test/: Main.hs  doctests.hs
(+132 files in other folders)
