[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.102"
bon = "3.9.0"
clap = { version = "4.5.60", features = ["derive"] }
crossterm = "0.29.0"
illuso = { path = "crates/illuso/" }
illuso-tui = { path = "crates/illuso-tui/" }
jiff = { version = "0.2.23", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json"] }
rusqlite = { version = "0.38.0", features = ["bundled", "jiff", "serde_json"] }
rustix = { version = "1.1.4", features = ["termios"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
serde_with = { version = "3.17.0", default-features = false, features = ["macros"] }
tokio = { version = "1.50.0", features = ["full"] }

[workspace.lints]
clippy.missing_errors_doc = "allow"
clippy.missing_panics_doc = "allow"
clippy.pedantic = { level = "warn", priority = -1 }
clippy.redundant_closure = "allow"
clippy.wildcard_imports = "allow"
