cabal-version: 2.2

name: indigo
version: 0.0.0.0

common common
  build-depends:
    , base
    , relude
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    DerivingStrategies
    DuplicateRecordFields
    InstanceSigs
    LambdaCase
    NamedFieldPuns
    OverloadedRecordDot
    OverloadedStrings
    TypeApplications
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=missing-methods
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wno-unticked-promoted-constructors
    -Wredundant-constraints

common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: common
  hs-source-dirs: src
  build-depends:
    , IntervalMap
    , brick
    , data-default-class
    , text-rope
    , vty
  exposed-modules:
    Indigo.Core.Buffer
    Indigo.Core.Direction
    Indigo.Core.Editor
    Indigo.Core.Position
    Indigo.Core.Range
    Indigo.Core.Rope
    Indigo.Core.Selection
    Indigo.Core.SelectionRange
    Indigo.Tui

executable indigo
  import:
    , common
    , executable
  main-is: src/Main.hs
  build-depends: indigo

test-suite test
  import:
    , common
    , executable
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
    , hedgehog
    , indigo
    , tasty
    , tasty-hedgehog
    , text-rope
  other-modules:
    Indigo.Test.Position
    Indigo.Test.Range
    Indigo.Test.Selection
