cabal-version: 3.6

name: indigo
version: 0.0.0.0

common common
  build-depends:
    , base
    , relude
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude
  default-language: GHC2021
  default-extensions:
    , BlockArguments
    , DerivingStrategies
    , DuplicateRecordFields
    , LambdaCase
    , OverloadedRecordDot
    , OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=missing-methods
    -Werror=partial-fields
    -Widentities
    -Wmissing-home-modules
    -Wno-unticked-promoted-constructors
    -Wredundant-constraints

common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: common
  hs-source-dirs: src
  build-depends:
    , IntervalMap
    , brick
    , data-default-class
    , fingertree
    , optparse-applicative
    , unliftio
    , vty
  exposed-modules:
    Indigo
    Indigo.Core.Buffer
    Indigo.Core.Buffer.File
    Indigo.Core.Buffer.File.Internal
    Indigo.Core.Buffer.InMemory
    Indigo.Core.Buffer.InMemory.Internal
    Indigo.Core.Conversion
    Indigo.Core.Direction
    Indigo.Core.Editor
    Indigo.Core.History
    Indigo.Core.Mode
    Indigo.Core.Operation
    Indigo.Core.Position
    Indigo.Core.Range
    Indigo.Core.Rope
    Indigo.Core.Selection
    Indigo.Core.SelectionRange
    Indigo.Core.Utilities
    Indigo.Options
    Indigo.Tui

executable indigo
  import:
    , common
    , executable
  main-is: src/Main.hs
  build-depends: indigo

test-suite test
  import:
    , common
    , executable
  type: exitcode-stdio-1.0
  main-is: Driver.hs
  hs-source-dirs: test
  build-depends:
    , hedgehog
    , indigo
    , tasty
    , tasty-discover
    , tasty-hedgehog
    , tasty-hunit
  other-modules:
    Indigo.Core.HistoryTest
    Indigo.Core.OperationTest
    Indigo.Core.PositionTest
    Indigo.Core.RangeTest
    Indigo.Core.RopeTest
    Indigo.Core.SelectionRangeTest
    Indigo.Core.SelectionTest
