[package]
name = "indigo-fuzz"
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
indigo-core = { workspace = true, features = ["arbitrary"] }
libfuzzer-sys = "0.4.12"
ropey = { workspace = true }

[[bin]]
name = "actions"
path = "fuzz_targets/actions.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cursor"
path = "fuzz_targets/cursor.rs"
test = false
doc = false
bench = false

[[bin]]
name = "events"
path = "fuzz_targets/events.rs"
test = false
doc = false
bench = false
