[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.102"
bitflags = "2.11.0"
illuso-llm = { path = "crates/illuso-llm/" }
illuso-term = { path = "crates/illuso-term/" }
illuso-tui = { path = "crates/illuso-tui/" }
jiff = { version = "0.2.23", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json"] }
rusqlite = { version = "0.38.0", features = ["bundled", "jiff", "serde_json"] }
rustix = { version = "1.1.4", features = ["event", "termios", "time"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
serde_with = { version = "3.18.0", default-features = false, features = ["macros"] }
tinyvec = { version = "1.10.0", features = ["std"] }
tokio = { version = "1.50.0", features = ["macros"] }
tracing = "0.1.44"
winnow = "0.7.15"

[workspace.lints]
clippy.missing_errors_doc = "allow"
clippy.missing_panics_doc = "allow"
clippy.pedantic = { level = "warn", priority = -1 }
clippy.redundant_closure = "allow"
clippy.uninlined_format_args = "allow"
clippy.wildcard_imports = "allow"
