[package]
name = "indigo-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
indigo-core = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
