[package]
name = "indigo-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "indigo-core-command"
path = "src/bin/command.rs"

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
fancy-regex = { workspace = true }
flagset = { workspace = true }
ropey = { workspace = true }
shell-words = { workspace = true }
slotmap = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
tokio-util = { workspace = true, features = ["io-util"] }
tracing = { workspace = true }
winnow = { workspace = true }

[dev-dependencies]
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }

[lints]
workspace = true
