[package]
name = "indigo-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "indigo-core-command"
path = "src/bin/command.rs"

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
fancy-regex = { workspace = true }
flagset = { workspace = true }
linkme = { workspace = true }
once_cell = { workspace = true }
ropey = { workspace = true }
shell-words = { workspace = true }
slotmap = { workspace = true }
smol = { workspace = true }
tracing = { workspace = true }
winnow = { workspace = true }

[dev-dependencies]
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }

[lints]
workspace = true
