[package]
name = "indigo-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-executor = { workspace = true }
async-io = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
flagset = { workspace = true }
futures-lite = { workspace = true }
indigo-core = { workspace = true }
ratatui = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }

[lints]
workspace = true
