[package]
name = "indigo"
version = "0.1.0"
edition = "2021"
default-run = "indigo"

[dependencies]
clap = { version = "4.4.0", default-features = false, features = ["derive", "error-context", "help", "std", "usage"] }
crossterm = { version = "0.27.0", default-features = false, features = ["bracketed-paste", "events", "event-stream"] }
indigo_core = { path = "../indigo_core" }
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt", "std"] }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
