[package]
name = "indigo_core"
version = "0.1.0"
authors = ["Evan Relf <evan@evanrelf.com>"]
license = "ISC"
edition = "2021"

[[bench]]
name = "rope_position"
harness = false

[dependencies]
anyhow = "1.0.64"
camino = "1.1.1"
clap = { version = "3.2.20", default-features = false, features = ["std", "derive"] }
generational-arena = "0.2.8"
regex = "1.6.0"
ropey = { version = "1.5.0", default-features = false }
shell-words = "1.1.0"
tracing = "0.1.36"

[dev-dependencies]
criterion = "0.3.6"
once_cell = "1.14.0"
proptest = "1.0.0"
