[package]
name = "indigo_core"
version = "0.1.0"
authors = ["Evan Relf <evan@evanrelf.com>"]
license = "ISC"
edition = "2021"

[[bench]]
name = "rope_position"
harness = false

[dependencies]
anyhow = "1.0.66"
camino = "1.1.1"
clap = { version = "4.0.19", default-features = false, features = ["std", "derive"] }
generational-arena = "0.2.8"
regex = "1.7.0"
ropey = { version = "1.5.0", default-features = false }
shell-words = "1.1.0"
tracing = "0.1.37"

[dev-dependencies]
criterion = "0.4.0"
once_cell = "1.16.0"
proptest = "1.0.0"
