[package]
name = "indigo_tui"
version = "0.1.0"
authors = ["Evan Relf <evan@evanrelf.com>"]
license = "ISC"
edition = "2021"
default-run = "indigo_tui"

[dependencies]
clap = { version = "3.2.8", features = ["std", "derive"], default-features = false }
crossterm = "0.24.0"
indigo_core = { path = "../indigo_core" }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["std", "fmt", "env-filter", "smallvec"], default-features = false }
tui = "0.18.0"
