[package]
name = "indigo_tui"
version = "0.1.0"
authors = ["Evan Relf <evan@evanrelf.com>"]
license = "ISC"
edition = "2021"
default-run = "indigo_tui"

[dependencies]
clap = { version = "4.0.19", features = ["std", "derive"], default-features = false }
crossterm = "0.25.0"
indigo_core = { path = "../indigo_core" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["std", "fmt", "env-filter", "smallvec"], default-features = false }
tui = { package = "ratatui", version = "0.21.0" }
