[package]
name = "agent"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bon = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
jiff = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
