[package]
name = "indigo-core"
edition = "2024"

[features]
arbitrary = ["dep:arbitrary"]
tracy = ["dep:tracing-tracy"]
tracy-alloc = ["tracy"]

[dependencies]
arbitrary = { workspace = true, optional = true }
flagset = { workspace = true }
ropey = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-tracy = { workspace = true, optional = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
winnow = { workspace = true }

[dev-dependencies]
arbitrary = { workspace = true }
arbtest = { workspace = true }

[lints]
workspace = true
