[package]
name = "indigo-bevy"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", default-features = false }
clap = { workspace = true, features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
flume = "0.11.1"
parking = "2.2.1"
ratatui = { workspace = true }

[lints]
workspace = true
