[package]
name = "indigo-core"
edition = "2024"

[features]
arbitrary = ["dep:arbitrary"]

[dependencies]
arbitrary = { workspace = true, optional = true }
camino = { workspace = true }
clap = { workspace = true }
flagset = { workspace = true }
indigo-wrap = { workspace = true }
memchr = { workspace = true }
ropey = { workspace = true }
shellwords = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
winnow = { workspace = true }

[dev-dependencies]
arbitrary = { workspace = true }
arbtest = { workspace = true }

[lints]
workspace = true
