[package]
name = "indigo-core"
edition = "2024"

[features]
arbitrary = ["dep:arbitrary"]

[dependencies]
anyhow = { workspace = true }
arbitrary = { workspace = true, optional = true }
bitflags = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
cola = { workspace = true }
indigo-wrap = { workspace = true }
memchr = { workspace = true }
regex-cursor = { workspace = true }
roaring = { workspace = true }
ropey = { workspace = true }
shell-words = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
winnow = { workspace = true }

[dev-dependencies]
arbitrary = { workspace = true }
arbtest = { workspace = true }

[lints]
workspace = true
