[package]
name = "indigo-event"
edition = "2024"

[features]
arbitrary = ["dep:arbitrary", "indigo-core/arbitrary"]

[dependencies]
arbitrary = { workspace = true, optional = true }
clap = { workspace = true }
indigo-core = { workspace = true }
shellwords = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
arbitrary = { workspace = true }
indigo-core = { workspace = true, features = ["arbitrary"] }

[lints]
workspace = true
