[package]
name = "indigo-tui"
edition = "2024"

[features]
tracy = ["dep:tracing-tracy", "indigo-core/tracy"]
tracy-alloc = ["tracy", "indigo-core/tracy-alloc"]

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
etcetera = { workspace = true }
flagset = { workspace = true }
hdrhistogram = { workspace = true }
indigo-core = { workspace = true }
indigo-event = { workspace = true }
ratatui = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tracy = { workspace = true, optional = true }

[lints]
workspace = true
