[package]
name = "indigo-tui"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
etcetera = { workspace = true }
flagset = { workspace = true }
hdrhistogram = { workspace = true }
indigo-core = { workspace = true }
ratatui = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
