[package]
name = "indigo-tui"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
flagset = { workspace = true }
indigo-core = { workspace = true }
ratatui = { workspace = true }

[lints]
workspace = true
